samples/_failures_safe/1761519549_ca1ce3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_785bda3a.c: In function ‘main’:
./samples/SAFE/__tmp_785bda3a.c:160:9: error: expected declaration or statement at end of input
  160 |         }
      |         ^
./samples/SAFE/__tmp_785bda3a.c:160:9: error: expected declaration or statement at end of input
